# mongodb-fastapi-and-crud-in-python

./: README.md  main.py  pyproject.toml
config/: database.py
routes/: user.py
