[tool.poetry]
name = "mongodb-fastapi-and-crud-in-python"
version = "1.0.0"
description = "Building a Python RestAPI app for CRUD Operations on-top of MongoDB."
authors = ["Julian Boronat <boronat.j.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.2.2"
requests = "^2.31.0"
pytest = "^8.1.1"
pymongo = {version = "3.11", extras = ["srv"]}
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"